Fixed the letterboxing with the images
Fixed where the images arent properly shown and are cropped or letterboxing occured

--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,10 @@ nav a:hover {
 /* IMAGE BOX */
 .image-box {
     width: 100%;
-    height: 230px;
+    height: auto;
     overflow: hidden;
     object-fit: contain;
-    background: #adb4db;
+    background: #fafafa;
     border-radius: 10px;
     margin: 15px 0;
 }
